--- a/rules/rule-identify-old-k8s-registry/test/workloads/input/deployment.yaml
+++ b/rules/rule-identify-old-k8s-registry/test/workloads/input/deployment.yaml
@@ -2,8 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: my-deployment
-  labels:
-    app : goproxy
+  namespace: kube-system
 spec:
   selector:
     matchLabels:
@@ -14,27 +13,7 @@ spec:
       labels :
         app : goproxy
     spec :
-      hostNetwork: true
-      containers :
-        -
-          name : mysql
-          image : k8s.gcr.io/mysql
-          securityContext:
-            allowPrivilegeEscalation: true
-          env :
-            -
-              name : MYSQL_ROOT_PASSWORD
-              value : "rootpasswd"
-        -
-          name : php
-          image : registry.hub.docker.com/php:7.0-apache
-          volumeMounts :
-            -
-              mountPath : /var/www/html
-              name : site-data
-              subPath : html
-      volumes :
-        -
-          name : site-data
-          persistentVolumeClaim :
-            claimName : my-lamp-site-data
+      containers:
+      - name : php
+        image : k8s.gcr.io/php:7.0-apache
+        
