--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -55,6 +55,9 @@ jobs:
         with:
           python-version: 3.10.6
 
+      - name: Update frameworks subsections
+        run: ./scripts/generate_subsections_ids.sh
+
       - run: python ./scripts/export.py
 
       - name: Strip Metadata Files Extensions
@@ -82,31 +85,26 @@ jobs:
 
 
   ks-and-rego-test:
-    # if: ${{ github.event.pull_request.merged == true && contains( github.event.pull_request.labels.*.name, 'trigger-integration-test') && github.event.pull_request.base.ref == 'master' }} ## run only if labeled as "trigger-integration-test" and base branch is master
     uses: kubescape/workflows/.github/workflows/kubescape-cli-e2e-tests.yaml@main
     needs: [build-and-rego-test]
     with:
       DOWNLOAD_ARTIFACT_KEY_NAME: ${{ needs.build-and-rego-test.outputs.REGO_ARTIFACT_KEY_NAME }}
       BINARY_TESTS: '[  "scan_nsa", 
-                        "scan_mitre"
-                    ]'
-
-      # BINARY_TESTS: '[  "scan_nsa", 
-      #                   "scan_mitre", 
-      #                   "scan_with_exceptions", 
-      #                   "scan_repository", 
-      #                   "scan_local_file", 
-      #                   "scan_local_glob_files", 
-      #                   "scan_local_list_of_files", 
-      #                   "scan_nsa_and_submit_to_backend", 
-      #                   "scan_mitre_and_submit_to_backend", 
-      #                   "scan_local_repository_and_submit_to_backend", 
-      #                   "scan_repository_from_url_and_submit_to_backend", 
-      #                   "scan_with_exception_to_backend", 
-      #                   "scan_with_custom_framework", 
-      #                   "scan_customer_configuration", 
-      #                   "host_scanner"
-      #                 ]'
+                        "scan_mitre", 
+                        "scan_with_exceptions", 
+                        "scan_repository", 
+                        "scan_local_file", 
+                        "scan_local_glob_files", 
+                        "scan_local_list_of_files", 
+                        "scan_nsa_and_submit_to_backend", 
+                        "scan_mitre_and_submit_to_backend", 
+                        "scan_local_repository_and_submit_to_backend", 
+                        "scan_repository_from_url_and_submit_to_backend", 
+                        "scan_with_exception_to_backend", 
+                        "scan_with_custom_framework", 
+                        "scan_customer_configuration", 
+                        "host_scanner"
+                      ]'
       DOWNLOAD_ARTIFACT_PATH: ${{ needs.build-and-rego-test.outputs.REGO_ARTIFACT_PATH }}
     secrets: inherit
 
@@ -123,27 +121,6 @@ jobs:
           name: ${{ env.REGO_ARTIFACT_KEY_NAME }}
           path: ${{ env.REGO_ARTIFACT_PATH }}
 
-      - uses: actions/checkout@24cb9080177205b6e8c946b17badbe402adc938f
-        name: checkout repo content
-        with:
-          token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-
-      - name: setup python
-        uses: actions/setup-python@75f3110429a8c05be0e1bf360334e4cced2b63fa
-        with:
-          python-version: 3.8
-
-      - name: install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests
-        
-      - name: execute upload script 
-        env:
-          README_API_KEY: ${{ secrets.README_API_KEY }}
-        run: |
-          python ./scripts/upload-readme.py
-
       - name: Create Release and upload assets
         id: create_release_upload_assets
         uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844
@@ -156,13 +133,3 @@ jobs:
           fail_on_unmatched_files: true
           prerelease: false
           files: '${{ env.REGO_ARTIFACT_PATH }}/*'
-
-      - run: git status
-
-      - run: git diff
-
-      - name: Commit change and push
-        uses: stefanzweifel/git-auto-commit-action@v4.16.0
-        with:
-          branch: main
-          commit_message: "Updated..."
