--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -12,9 +12,16 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  REGO_ARTIFACT_KEY_NAME: rego_artifact
+  REGO_ARTIFACT_PATH: release
+
 jobs:
   # testing link checks
   markdown-link-check:
+    outputs:
+      REGO_ARTIFACT_KEY_NAME: ${{ steps.set_outputs.outputs.REGO_ARTIFACT_KEY_NAME }}
+      REGO_ARTIFACT_PATH: ${{ steps.set_outputs.outputs.REGO_ARTIFACT_PATH }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
@@ -22,6 +29,12 @@ jobs:
         uses: gaurav-nelson/github-action-markdown-link-check@5c5dfc0ac2e225883c0e5f03a85311ec2830d368
         with:
           use-verbose-mode: 'yes'
+
+      - name: Set outputs
+        id: set_outputs
+        run: |
+          echo "REGO_ARTIFACT_KEY_NAME=${{ env.REGO_ARTIFACT_KEY_NAME }}" >> $GITHUB_OUTPUT
+          echo "REGO_ARTIFACT_PATH=${{ env.REGO_ARTIFACT_PATH }}" >> $GITHUB_OUTPUT
 
   # testing rego library
   test_rego:
@@ -49,18 +62,26 @@ jobs:
       BUILD_PATH: github.com/kubescape/regolibrary/gitregostore/...
     secrets: inherit
 
-  # build and e2e tests
-  binary_build_and_e2e:
-    uses: kubescape/kubescape/.github/workflows/b-binary-build-and-e2e-tests.yaml@master
+  ks-and-rego-test:
+    uses: kubescape/workflows/.github/workflows/kubescape-cli-e2e-tests.yaml@main
     needs: [markdown-link-check, test_rego, test_pr_checks]
     with:
-      COMPONENT_NAME: kubescape
-      CGO_ENABLED: 1
-      GO111MODULE: ""
-      GO_VERSION: "1.19"
-      RELEASE: ""
-      CLIENT: test
-      CHECKOUT_REPO: kubescape/kubescape
-      BUILD_AND_TEST_LOCAL_KUBESCAPE_CLI: false
+      DOWNLOAD_ARTIFACT_KEY_NAME: ${{ needs.markdown-link-check.outputs.REGO_ARTIFACT_KEY_NAME }}
+      BINARY_TESTS: '[  "scan_nsa", 
+                        "scan_mitre", 
+                        "scan_with_exceptions", 
+                        "scan_repository", 
+                        "scan_local_file", 
+                        "scan_local_glob_files", 
+                        "scan_local_list_of_files", 
+                        "scan_nsa_and_submit_to_backend", 
+                        "scan_mitre_and_submit_to_backend", 
+                        "scan_local_repository_and_submit_to_backend", 
+                        "scan_repository_from_url_and_submit_to_backend", 
+                        "scan_with_exception_to_backend", 
+                        "scan_with_custom_framework", 
+                        "scan_customer_configuration", 
+                        "host_scanner"
+                      ]'
+      DOWNLOAD_ARTIFACT_PATH: ${{ needs.build-and-rego-test.outputs.REGO_ARTIFACT_PATH }}
     secrets: inherit
-    
