--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -4,7 +4,7 @@ on:
     branches: [ master, main ]
   pull_request:
     # run for every chnage in the PR
-    types: [ opened, synchronize, reopened ]
+    types: [ opened, synchronize, reopened, ready_for_review ]
     # Do not run the pipeline if only Markdown files changed
     paths-ignore: ['**.md']
 
@@ -17,11 +17,9 @@ env:
   REGO_ARTIFACT_PATH: release
 
 jobs:
+
   # testing link checks
   markdown-link-check:
-    outputs:
-      REGO_ARTIFACT_KEY_NAME: ${{ steps.set_outputs.outputs.REGO_ARTIFACT_KEY_NAME }}
-      REGO_ARTIFACT_PATH: ${{ steps.set_outputs.outputs.REGO_ARTIFACT_PATH }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
@@ -29,28 +27,6 @@ jobs:
         uses: gaurav-nelson/github-action-markdown-link-check@5c5dfc0ac2e225883c0e5f03a85311ec2830d368
         with:
           use-verbose-mode: 'yes'
-
-      - name: Set outputs
-        id: set_outputs
-        run: |
-          echo "REGO_ARTIFACT_KEY_NAME=${{ env.REGO_ARTIFACT_KEY_NAME }}" >> $GITHUB_OUTPUT
-          echo "REGO_ARTIFACT_PATH=${{ env.REGO_ARTIFACT_PATH }}" >> $GITHUB_OUTPUT
-
-  # testing rego library
-  test_rego:
-    name: Test Regos
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@50fbc622fc4ef5163becd7fab6573eac35f8462e
-      - name: Set up Go
-        uses: actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568
-        with:
-          go-version: 1.19
-      - name: Test Regoes
-        working-directory: testrunner
-        run: |-
-          apt update && apt install -y cmake
-          GOPATH=$(go env GOPATH) make
 
   # main job of testing and building the env. 
   test_pr_checks:
@@ -62,11 +38,64 @@ jobs:
       BUILD_PATH: github.com/kubescape/regolibrary/gitregostore/...
     secrets: inherit
 
+  build-and-rego-test:
+    name: Build and test rego artifacts
+    runs-on: ubuntu-latest
+    outputs:
+      REGO_ARTIFACT_KEY_NAME: ${{ steps.set_outputs.outputs.REGO_ARTIFACT_KEY_NAME }}
+      REGO_ARTIFACT_PATH: ${{ steps.set_outputs.outputs.REGO_ARTIFACT_PATH }}
+    steps:
+      - uses: actions/checkout@24cb9080177205b6e8c946b17badbe402adc938f
+        name: checkout repo content
+        with:
+          token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+        
+      # Test using Golang OPA hot rule compilation
+      - name: Set up Go
+        uses: actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568
+        with:
+          go-version: 1.19
+
+      # testing rego library
+      - name: Test Regoes
+        working-directory: testrunner
+        run: |
+          apt update && apt install -y cmake
+          GOPATH=$(go env GOPATH) make
+
+      - name: setup python
+        uses: actions/setup-python@75f3110429a8c05be0e1bf360334e4cced2b63fa
+        with:
+          python-version: 3.10.6
+
+      - run: python ./scripts/export.py
+
+      - name: Strip Metadata Files Extensions
+        run: |
+          cd release
+          find -type f -name '*.json' | while read f; do mv "$f" "${f%.json}"; done
+          find -type f -name '*.csv' | while read f; do mv "$f" "${f%.csv}"; done
+
+      - run: python ./scripts/validations.py
+
+      - name: Set outputs
+        id: set_outputs
+        run: |
+          echo "REGO_ARTIFACT_KEY_NAME=${{ env.REGO_ARTIFACT_KEY_NAME }}" >> $GITHUB_OUTPUT
+          echo "REGO_ARTIFACT_PATH=${{ env.REGO_ARTIFACT_PATH }}" >> $GITHUB_OUTPUT
+
+      - uses: actions/upload-artifact@83fd05a356d7e2593de66fc9913b3002723633cb # ratchet:actions/upload-artifact@v3.1.1
+        name: Upload artifact
+        with:
+          name: ${{ env.REGO_ARTIFACT_KEY_NAME }}
+          path: ${{ env.REGO_ARTIFACT_PATH }}/
+          if-no-files-found: error
+
   ks-and-rego-test:
     uses: kubescape/workflows/.github/workflows/kubescape-cli-e2e-tests.yaml@main
-    needs: [markdown-link-check, test_rego, test_pr_checks]
+    needs: [build-and-rego-test]
     with:
-      DOWNLOAD_ARTIFACT_KEY_NAME: ${{ needs.markdown-link-check.outputs.REGO_ARTIFACT_KEY_NAME }}
+      DOWNLOAD_ARTIFACT_KEY_NAME: ${{ needs.build-and-rego-test.outputs.REGO_ARTIFACT_KEY_NAME }}
       BINARY_TESTS: '[  "scan_nsa", 
                         "scan_mitre", 
                         "scan_with_exceptions", 
