--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -43,11 +43,12 @@ jobs:
         with:
           go-version: 1.19
 
-      - name: Test Regoes
-        working-directory: testrunner
-        run: |
-          apt update && apt install -y cmake
-          GOPATH=$(go env GOPATH) make
+      #### temporary disabled
+      # - name: Test Regoes
+      #   working-directory: testrunner
+      #   run: |
+      #     apt update && apt install -y cmake
+      #     GOPATH=$(go env GOPATH) make
 
       - name: setup python
         uses: actions/setup-python@75f3110429a8c05be0e1bf360334e4cced2b63fa
