--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -56,13 +56,12 @@ jobs:
         with:
           go-version: 1.19
 
-
       # testing rego library
-      # - name: Test Regoes
-      #   working-directory: testrunner
-      #   run: |
-      #     apt update && apt install -y cmake
-      #     GOPATH=$(go env GOPATH) make
+      - name: Test Regoes
+        working-directory: testrunner
+        run: |
+          apt update && apt install -y cmake
+          GOPATH=$(go env GOPATH) make
 
       - name: setup python
         uses: actions/setup-python@75f3110429a8c05be0e1bf360334e4cced2b63fa
