--- a/rules/runAsUserName/test/cronjob/input/cronjob1.yaml
+++ b/rules/runAsUserName/test/cronjob/input/cronjob1.yaml
@@ -11,6 +11,8 @@ spec:
           securityContext:
             runAsUserName: null
           hostNetwork: true
+          nodeSelector:
+            kubernetes.io/os: windows
           containers :
             -
               name : mysql
