--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -114,7 +114,8 @@ jobs:
                         "scan_with_exception_to_backend", 
                         "scan_with_custom_framework", 
                         "scan_customer_configuration", 
-                        "host_scanner"
+                        "host_scanner",
+                        "stripe_plans"
                       ]'
       DOWNLOAD_ARTIFACT_PATH: ${{ needs.build-and-rego-test.outputs.REGO_ARTIFACT_PATH }}
     secrets: inherit
