changed REGO_ARTIFACT_PATH var to releaseDev
Signed-off-by: Matan Avital <matavital13@gmail.com>

--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -14,7 +14,7 @@ concurrency:
 
 env:
   REGO_ARTIFACT_KEY_NAME: rego_artifact
-  REGO_ARTIFACT_PATH: release
+  REGO_ARTIFACT_PATH: releaseDev
 
 jobs:
 
