--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -76,11 +76,11 @@ jobs:
           rm -r releaseDev
           cp -R pre-release releaseDev
 
-      # - name: Strip Metadata Files Extensions (to be removed)
-      #   run: |
-      #     cd releaseDev
-      #     find -type f -name '*.json' | while read f; do mv "$f" "${f%.json}"; done
-      #     find -type f -name '*.csv' | while read f; do mv "$f" "${f%.csv}"; done
+      - name: Strip Metadata Files Extensions
+        run: |
+          cd releaseDev
+          find -type f -name '*.json' | while read f; do mv "$f" "${f%.json}"; done
+          find -type f -name '*.csv' | while read f; do mv "$f" "${f%.csv}"; done
 
       - name: Set outputs
         id: set_outputs
