--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -44,19 +44,23 @@ jobs:
         uses: actions/setup-python@75f3110429a8c05be0e1bf360334e4cced2b63fa
         with:
           python-version: 3.10.6
+      
+      # validate control-ID duplications 
+      - run: python ./scripts/validations.py
 
+      # generating subsections ids
       - name: Update frameworks subsections
         run: ./scripts/generate_subsections_ids.sh
 
+      # run export script to generate regolibrary artifacts 
       - run: python ./scripts/export.py
 
+      # removing artifacts file extensions 
       - name: Strip Metadata Files Extensions
         run: |
           cd release
           find -type f -name '*.json' | while read f; do mv "$f" "${f%.json}"; done
           find -type f -name '*.csv' | while read f; do mv "$f" "${f%.csv}"; done
-
-      - run: python ./scripts/validations.py
 
       - run: ls -laR
 
