--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -1,46 +1,28 @@
-name: pr-tests
+name: create release
 on:
-  push:
-    branches: [ master, main ]
-  pull_request:
-    # run for every chnage in the PR
-    types: [ opened, synchronize, reopened, ready_for_review ]
-    # Do not run the pipeline if only Markdown files changed
-    paths-ignore: ['**.md']
+  workflow_dispatch:
+    inputs:
+      TAG:
+        description: 'Tag name'
+        required: true
+        type: string
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+  push:
+    tags:
+      - 'v*.*.*-rc.*'
 
 env:
   REGO_ARTIFACT_KEY_NAME: rego_artifact
-  REGO_ARTIFACT_PATH: releaseDev
+  REGO_ARTIFACT_PATH: release
 
 jobs:
-  # testing link checks
-  markdown-link-check:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
-      - name: Check links
-        uses: gaurav-nelson/github-action-markdown-link-check@5c5dfc0ac2e225883c0e5f03a85311ec2830d368
-        with:
-          use-verbose-mode: 'yes'
-
-  # main job of testing and building the env. 
-  test_pr_checks:
-    permissions:
-      pull-requests: write
-    uses: kubescape/workflows/.github/workflows/go-basic-tests.yaml@main
-    with:
-      GO_VERSION: 1.19
-      BUILD_PATH: github.com/kubescape/regolibrary/gitregostore/...
-    secrets: inherit
 
   build-and-rego-test:
+    # if: endsWith(github.ref, 'main') == true
     name: Build and test rego artifacts
     runs-on: ubuntu-latest
     outputs:
+      NEW_TAG: ${{ steps.tag-calculator.outputs.NEW_TAG }}
       REGO_ARTIFACT_KEY_NAME: ${{ steps.set_outputs.outputs.REGO_ARTIFACT_KEY_NAME }}
       REGO_ARTIFACT_PATH: ${{ steps.set_outputs.outputs.REGO_ARTIFACT_PATH }}
     steps:
@@ -49,13 +31,18 @@ jobs:
         with:
           token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
         
+      - id: tag-calculator
+        uses: kubescape/workflows/.github/actions/tag-action@main
+        with: 
+          ORIGINAL_TAG: ${{ inputs.TAG }}
+          SUB_STRING: "-rc"
+
       # Test using Golang OPA hot rule compilation
       - name: Set up Go
         uses: actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568
         with:
           go-version: 1.19
 
-      # testing rego library
       - name: Test Regoes
         working-directory: testrunner
         run: |
@@ -67,26 +54,24 @@ jobs:
         with:
           python-version: 3.10.6
 
-      # validate control-ID duplications 
-      - run: python ./scripts/validations.py
-
       # generating subsections ids
       - name: Update frameworks subsections
         run: ./scripts/generate_subsections_ids.sh
 
-      # run export script to generate regolibrary artifacts 
-      - name: Run export script
-        run: |
-          OUTPUT=pre-release python ./scripts/export.py
-          rm -r releaseDev
-          cp -R pre-release releaseDev
+      # validate control-ID duplications 
+      - run: python ./scripts/validations.py
 
-      # removing artifacts file extensions 
+      # run export script to generate regolibrary artifacts 
+      - run: python ./scripts/export.py
+
+      # removing release artifacts file extensions 
       - name: Strip Metadata Files Extensions
         run: |
-          cd releaseDev
+          cd release
           find -type f -name '*.json' | while read f; do mv "$f" "${f%.json}"; done
           find -type f -name '*.csv' | while read f; do mv "$f" "${f%.csv}"; done
+
+      - run: ls -laR
 
       - name: Set outputs
         id: set_outputs
@@ -101,7 +86,7 @@ jobs:
           path: ${{ env.REGO_ARTIFACT_PATH }}/
           if-no-files-found: error
 
-  # test kubescape with regolibrary artifacts 
+
   ks-and-rego-test:
     uses: kubescape/workflows/.github/workflows/kubescape-cli-e2e-tests.yaml@main
     needs: [build-and-rego-test]
@@ -125,3 +110,29 @@ jobs:
                       ]'
       DOWNLOAD_ARTIFACT_PATH: ${{ needs.build-and-rego-test.outputs.REGO_ARTIFACT_PATH }}
     secrets: inherit
+
+  release:
+    if: ${{ (always() && contains(needs.*.result, 'success') && !(contains(needs.*.result, 'failure')) && !(contains(needs.*.result, 'cancelled'))) }}
+    needs: [ks-and-rego-test, build-and-rego-test]
+    name: create release and upload assets
+    runs-on: ubuntu-latest
+    steps:
+
+      - uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # ratchet:actions/download-artifact@v3.0.2
+        id: download-artifact
+        with:
+          name: ${{ env.REGO_ARTIFACT_KEY_NAME }}
+          path: ${{ env.REGO_ARTIFACT_PATH }}
+
+      - name: Create Release and upload assets
+        id: create_release_upload_assets
+        uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844
+        with:
+          token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+          name: Release ${{ needs.build-and-rego-test.outputs.NEW_TAG }}
+          tag_name: ${{ needs.build-and-rego-test.outputs.NEW_TAG }}
+          body: ${{ github.event.pull_request.body }}
+          draft: false
+          fail_on_unmatched_files: true
+          prerelease: false
+          files: '${{ env.REGO_ARTIFACT_PATH }}/*'
