--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -113,15 +113,32 @@ jobs:
                         "scan_repository", 
                         "scan_local_file", 
                         "scan_local_glob_files", 
-                        "scan_local_list_of_files", 
                         "scan_nsa_and_submit_to_backend", 
                         "scan_mitre_and_submit_to_backend", 
                         "scan_local_repository_and_submit_to_backend", 
                         "scan_repository_from_url_and_submit_to_backend", 
+                        "host_scanner"
+                      ]'
+      DOWNLOAD_ARTIFACT_PATH: ${{ needs.build-and-rego-test.outputs.REGO_ARTIFACT_PATH }}
+    secrets: inherit
+
+  # removing artifacts file extensions 
+  - name: Strip Metadata Files Extensions
+    run: |
+      cd releaseDev
+      find -type f -name '*.json' | while read f; do mv "$f" "${f%.json}"; done
+      find -type f -name '*.csv' | while read f; do mv "$f" "${f%.csv}"; done
+
+  # test kubescape with regolibrary artifacts with extentions
+  ks-and-rego-test:
+    uses: kubescape/workflows/.github/workflows/kubescape-cli-e2e-tests.yaml@main
+    needs: [build-and-rego-test]
+    with:
+      DOWNLOAD_ARTIFACT_KEY_NAME: ${{ needs.build-and-rego-test.outputs.REGO_ARTIFACT_KEY_NAME }}
+      BINARY_TESTS: '[  "scan_local_list_of_files", 
                         "scan_with_exception_to_backend", 
                         "scan_with_custom_framework", 
                         "scan_customer_configuration", 
-                        "host_scanner"
                       ]'
       DOWNLOAD_ARTIFACT_PATH: ${{ needs.build-and-rego-test.outputs.REGO_ARTIFACT_PATH }}
     secrets: inherit
