addign  runs-on
Signed-off-by: Yuval Leibovich <yuvall@armosec.io>

--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -125,6 +125,7 @@ jobs:
   # test kubescape with regolibrary artifacts 
   strip-for-ks:
     name: Strip Metadata Files Extensions
+    runs-on: ubuntu-latest
     steps:
       - name: Strip Metadata Files Extensions
         run: |
