--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -81,6 +81,8 @@ jobs:
           rm -r releaseDev
           cp -R pre-release releaseDev
 
+      - name: ls-releasedev
+        run: ls releaseDev/
       # removing artifacts file extensions 
       # - name: Strip Metadata Files Extensions
       #   run: |
