updating tests and fixing issues
Signed-off-by: Yuval Leibovich <yuvall@armosec.io>

--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -106,7 +106,8 @@ jobs:
                         "scan_with_exception_to_backend", 
                         "scan_with_custom_framework", 
                         "scan_customer_configuration", 
-                        "host_scanner"
+                        "host_scanner",
+                        "scan_local_list_of_files"
                       ]'
       DOWNLOAD_ARTIFACT_PATH: ${{ needs.build-and-rego-test.outputs.REGO_ARTIFACT_PATH }}
     secrets: inherit
