--- a/.github/workflows/update-docs.yaml
+++ b/.github/workflows/update-docs.yaml
@@ -1,7 +1,7 @@
 name: Updating documentation
 on:
   push:
-    branches: [master]
+    branches: [ master, main ]
 jobs:
   once:
     name: Upload to documentation
@@ -9,6 +9,10 @@ jobs:
     steps:
       - uses: actions/checkout@dc323e67f16fb5f7663d20ff7941f27f5809e9b6
         name: checkout repo content
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
       - name: setup python
         uses: actions/setup-python@75f3110429a8c05be0e1bf360334e4cced2b63fa
         with:
