Changes to be committed: modified:   .github/workflows/update-docs.yaml

--- a/.github/workflows/update-docs.yaml
+++ b/.github/workflows/update-docs.yaml
@@ -1,7 +1,7 @@
 name: Updating documentation
 on:
   push:
-    branches: [master]
+    branches: [ main, master ]
 jobs:
   once:
     name: Upload to documentation
