--- a/.github/workflows/update-docs.yaml
+++ b/.github/workflows/update-docs.yaml
@@ -1,20 +1,18 @@
 name: Updating documentation
 on:
   push:
-    branches: [ master, main ]
+    branches: [master]
 jobs:
   once:
     name: Upload to documentation
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@dc323e67f16fb5f7663d20ff7941f27f5809e9b6
+      # ratchet:actions/checkout@v3.5.2
+      - uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab
         name: checkout repo content
-      - name: Use Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16'
       - name: setup python
-        uses: actions/setup-python@75f3110429a8c05be0e1bf360334e4cced2b63fa
+        # ratchet:actions/setup-python@v4.6.0
+        uses: actions/setup-python@57ded4d7d5e986d7296eab16560982c6dd7c923b
         with:
           python-version: 3.8
       - name: install dependencies
