--- a/.github/workflows/export-dev.yaml
+++ b/.github/workflows/export-dev.yaml
@@ -26,5 +26,5 @@ jobs:
       - name: Commit & Push changes
         uses: Andro999b/push@c77535fe7a94645f7ceca83e48e6cc977620710e
         with:
-          branch: dev
+          branch: master
           github_token: ${{ secrets.GITHUB_TOKEN }}
