--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -104,9 +104,9 @@ jobs:
     if: |
       always() &&
       contains(needs.*.result, 'success') &&
-      !contains(needs.*.result, 'skipped') &&
-      !contains(needs.*.result, 'failure') &&
-      !contains(needs.*.result, 'cancelled')
+      (!contains(needs.*.result, 'skipped') ||
+      !contains(needs.*.result, 'failure') ||
+      !contains(needs.*.result, 'cancelled'))
     with:
       DOWNLOAD_ARTIFACT_KEY_NAME: ${{ needs.build-and-rego-test.outputs.REGO_ARTIFACT_KEY_NAME }}
       BINARY_TESTS: '[  "scan_nsa", 
