--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -100,6 +100,20 @@ jobs:
   ks-and-rego-test:
     uses: kubescape/workflows/.github/workflows/kubescape-cli-e2e-tests.yaml@main
     needs: [build-and-rego-test]
+    env:
+      CUSTOMER: ${{ secrets.CUSTOMER }}
+      USERNAME: ${{ secrets.USERNAME }}
+      PASSWORD: ${{ secrets.PASSWORD }}
+      CLIENT_ID: ${{ secrets.CLIENT_ID_PROD }}
+      SECRET_KEY: ${{ secrets.SECRET_KEY_PROD }}
+      REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
+      REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
+    if: |
+      always() &&
+      contains(needs.*.result, 'success') &&
+      (!contains(needs.*.result, 'skipped') ||
+      !contains(needs.*.result, 'failure') ||
+      !contains(needs.*.result, 'cancelled'))
     with:
       DOWNLOAD_ARTIFACT_KEY_NAME: ${{ needs.build-and-rego-test.outputs.REGO_ARTIFACT_KEY_NAME }}
       BINARY_TESTS: '[  "scan_nsa", 
@@ -118,9 +132,3 @@ jobs:
       DOWNLOAD_ARTIFACT_PATH: ${{ needs.build-and-rego-test.outputs.REGO_ARTIFACT_PATH }}
     secrets: inherit
     # fail the job if jon terminated with skip / fail / cancel
-    if: |
-      always() &&
-      contains(needs.*.result, 'success') &&
-      (!contains(needs.*.result, 'skipped') ||
-      !contains(needs.*.result, 'failure') ||
-      !contains(needs.*.result, 'cancelled'))
