--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -101,11 +101,18 @@ jobs:
     uses: kubescape/workflows/.github/workflows/kubescape-cli-e2e-tests.yaml@main
     needs: [build-and-rego-test]
     if: always()
-      # contains(needs.*.result, 'success') &&
-      # (!contains(needs.*.result, 'skipped') ||
-      # !contains(needs.*.result, 'failure') ||
-      # !contains(needs.*.result, 'cancelled'))
+      contains(needs.*.result, 'success') &&
+      (!contains(needs.*.result, 'skipped') ||
+      (!contains(needs.*.result, 'failure') ||
+      (!contains(needs.*.result, 'cancelled'))
     with:
+      CUSTOMER: ${{ secrets.CUSTOMER }}
+      USERNAME: ${{ secrets.USERNAME }}
+      PASSWORD: ${{ secrets.PASSWORD }}
+      CLIENT_ID: ${{ secrets.CLIENT_ID_PROD }}
+      SECRET_KEY: ${{ secrets.SECRET_KEY_PROD }}
+      REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
+      REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
       DOWNLOAD_ARTIFACT_KEY_NAME: ${{ needs.build-and-rego-test.outputs.REGO_ARTIFACT_KEY_NAME }}
       BINARY_TESTS: '[  "scan_nsa", 
                         "scan_mitre", 
