--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -114,7 +114,8 @@ jobs:
   ks-and-rego-test:
     uses: kubescape/workflows/.github/workflows/kubescape-cli-e2e-tests.yaml@main
     needs: [build-and-rego-test]
-    if: always()
+    if: |
+      always() &&
       contains(needs.*.result, 'success') &&
       (!contains(needs.*.result, 'skipped') ||
       (!contains(needs.*.result, 'failure') ||
