--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -1,6 +1,7 @@
 name: pr-tests
 on:
   push:
+    # need to rebase here
     branches: [ master, main ]
   pull_request:
     # run for every chnage in the PR
