--- a/.github/workflows/export-dev.yaml
+++ b/.github/workflows/export-dev.yaml
@@ -23,8 +23,15 @@ jobs:
       - name: stage changed files
         run: git add .
 
+      # - name: Commit & Push changes
+      #   uses: Andro999b/push@c77535fe7a94645f7ceca83e48e6cc977620710e
+      #   with:
+      #     branch: master
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Commit & Push changes
-        uses: Andro999b/push@c77535fe7a94645f7ceca83e48e6cc977620710e
+        uses: actions-js/push@v1.1
         with:
           branch: master
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          rebase: true
