add compliance score system test
Signed-off-by: YiscahLevySilas1 <yiscahls@armosec.io>

--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -113,7 +113,8 @@ jobs:
                         "scan_local_repository_and_submit_to_backend", 
                         "scan_repository_from_url_and_submit_to_backend", 
                         "host_scanner",
-                        "scan_local_list_of_files"
+                        "scan_local_list_of_files",
+                        "scan_compliance_score"
                       ]'
       DOWNLOAD_ARTIFACT_PATH: ${{ needs.build-and-rego-test.outputs.REGO_ARTIFACT_PATH }}
     secrets: inherit
